# MD-DARP-Research

./: CMakeLists.txt  README.md  TODO.md
cpp/: CMakeLists.txt  example.cpp
cpp/TSP_example/: tsp_mtz.cpp
cpp/core/: ALNSSolver.cpp  ALNSSolver.h  CMakeLists.txt  CPLEXSoftSolver.cpp  CPLEXSoftSolver.h  CPLEXSolver.cpp  CPLEXSolver.h  DARPMDSolver.cpp  DARPMDSolver.h  DARPMDTabuSolver.cpp  DARPMDTabuSolver.h  DARPMD_ProblemInstance.cpp  DARPMD_ProblemInstance.h  DARPMD_ProblemInstance.hh  DARPMD_ResultInstance.cpp  DARPMD_ResultInstance.h  MDDARP_ProblemInstance.cpp  MDDARP_ProblemInstance.h  MDDARP_ResultInstance.cpp  MDDARP_ResultInstance.h  Makefile  Metadata.h  Solver.h  logger.h  main.cpp
cpp/core/alns/: ALNSEvaluator.cpp  ALNSEvaluator.h  ALNSOperators.cpp  ALNSOperators.h  ALNSParams.h  ALNSRoute.h  ALNSSolution.h  RoutePool.cpp  RoutePool.h  SetBasedSolver.h  SetCoveringSolver.cpp  SetCoveringSolver.h  SetPartitioningSolver.cpp  SetPartitioningSolver.h
cpp/experimental/: DARPMDTabuSolver.h  README.md  SetCoveringSolver.cpp  SetCoveringSolver.h  regret2andInsertionConst.cpp
cpp/experimental/TSP_example/: .gitignore  Makefile
cpp/instance_analyzer/: CMakeLists.txt  InstanceAnalyzer.cpp  InstanceAnalyzer.h  main_analyzer.cpp
cpp/tests/: CMakeLists.txt  run_experiments.cpp
data/cordeau-instances/: README.md
data/cordeau-tabu-instances/: .gitignore
data/instances_reqs_loader/: 10R2V.yaml  15R3V.yaml  15r3v.json  1R1V.yaml  20R3V.yaml  2R1V.yaml  bcn-3-16-solution.json  bcn-3-16.json  bcn-3-16.yaml  bcn-5-31.yaml  bcn-5-32-solution.json  bcn-5-32.json  bcn-5-32.yaml  bcn-5-42-solution.json  bcn-5-42.json  bcn-5-42.yaml  bcn-7-52-solution.json  bcn-7-72.yaml
data/instances_static/: bcn-10R2V.json  bcn-13R2V.json  bcn-15R3V.json  bcn-20R4V.json  gracia-4R2V.json  gracia-6R2V.json
data/instances_static/cordeau-instances/: a2-16.json  a2-20.json  a2-24.json  a3-18.json  a3-24.json  a3-30.json  a3-36.json  a4-16.json  a4-24.json  a4-32.json  a4-40.json  a4-48.json  a5-40.json  b2-16.json  b2-20.json  b2-24.json  b3-18.json  b3-24.json  b3-30.json  b3-36.json  b4-16.json  b4-24.json  b4-32.json  b4-40.json  b4-48.json  b5-40.json  install.sh
data/our-mddarp-instances/: 10R2V_naples.yaml  bcn-3-16.json  bcn-5-32.yaml  bcn-5-42.yaml  bcn-7-52.yaml  bcn-9-72-solution.json  bcn-9-72.yaml
python/: .gitignore  README.md  requirements.txt
python/darp-gen/: README.md  app.py  generated_instance.json  input_loader.py  logic.py  main.py  requirements.txt
python/darp-res-viewer/: README.md  cordeau_viewer.py  main.py  res_viewer.py
python/instance-converter/: README.md  main.py  run_all.sh
python/launcher/: README.md  config.py  launcher_app.py  main.py  runner.py  widgets.py
python/mddarp-res-viewer/: main.py
python/pymoo/src/: darp_model.py  instance1.py  instance2.py
python/pyomo/: MDDARP_ProblemInstance.py  model.py
python/pyomo/src/: MDDARP_ProblemInstance.py  barcelona_darp.json  darp_generator.py  darp_multidepot.py  darpms-model.py  darpms2-model.py  insatance3.py  instance1.py  launcher.py  model.py
scripts/: alns_operator_weights.csv  analysis_new_params.ipynb  boxplot_test_new_params.py  compare_evaluators.py  compare_operators.py  install_cordeau_instances.sh  install_cordeau_instances_tabu.sh  quick_test.sh  results_0.json  results_1.json  results_2.json  results_3.json  results_a0.json  results_a1.json  results_b0.json  results_b1.json  semi_feasible_counter.py  test_new_params.py
scripts/evaluators_analisis/: alns_evolution_0.csv  alns_evolution_1.csv  alns_evolution_2.csv  alns_evolution_3.csv  alns_evolution_4.csv  alns_evolution_5.csv  alns_evolution_6.csv  alns_evolution_7.csv  alns_evolution_8.csv  alns_evolution_9.csv
tuning/: .gitignore  README.md  instances.txt  parameters.txt  run.sh  scenario.txt
